--- a/myProjects/CSS Frameworks/subPages/home.html
+++ b/myProjects/CSS Frameworks/subPages/home.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="overflow-hidden">
+<body>
 
 <header>
 
@@ -31,6 +31,8 @@
 
                 <ul class="navbar-nav m-lg-auto mb-2 mb-lg-0" style="left:200px;">
                     <li class="nav-item"><a class="nav-link text-white" href="#"><span>Home</span></a></li>
+                    <li class="nav-item"><a class="nav-link text-white" 
+                                            href="../subPages/placeOrder.html"><span>Place Orders</span></a></li>
                     <li class="nav-item"><a class="nav-link text-white"
                                             href="../subPages/orders.html"><span>Orders</span></a></li>
                     <li class="nav-item"><a class="nav-link text-white"
@@ -70,244 +72,73 @@
 
 <main>
 
-    <section class="Home container-fluid position-relative">
-
-        <div class="container-fluid position-absolute shadow">
-
-            <div class="row h-100 position-relative start-0 end-0 m-auto" style="width: 100%;top: 10px;">
-
-                <div class="col-4 col bg-light shadow">
-
-                    <div class="row position-relative" style="height: 40px; background-color: #F1C40F;">
-                        <h3 class="fs-6 text-black top-0 bottom-0 m-auto "
-                            style="text-align: center;">Invoice Details</h3>
-                    </div>
-
-                    <div class="row">
-
-                        <div class="col">
-
-                            <div class="form position-relative" style="top: 10px;">
-                                <input class="form-control bg-transparent" id="floatingId" placeholder="Order Id"
-                                       type="text">
-                            </div>
-
-                        </div>
-
-                        <div class="col">
-
-                            <div class="form-group" style="top: 10px;">
-                                <label class="col-md-3 control-label" for="textInput">OrderDate</label>
-                                <div class="col-md-4 m-lg-auto" style="width: 100%;">
-                                    <input class="form-control input-md bg-transparent" id="textInput" name="textInput"
-                                           placeholder="placeholder" type="date">
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="row">
-
-                        <div class="col">
-
-                            <div class="form-floating position-relative" style="top: 20px;">
-                                <select aria-label="Floating label select example" class="form-select bg-transparent"
-                                        id="floatingSelect" style="height: 40px; width: 100%;">
-                                    <option selected>Open this select menu</option>
-                                    <option value="1">C001</option>
-                                    <option value="2">C002</option>
-                                    <option value="3">C003</option>
-                                </select>
-
-                                <label for="floatingSelect">Customer ID</label>
-
-                            </div>
-
-                        </div>
-
-                        <div class="col">
-
-                            <div class="form-floating position-relative" style="top: 20px;">
-                                <input class="form-control bg-transparent" id="floatingPassword" placeholder="Name"
-                                       style="height: 40px;"
-                                       type="text">
-                                <label for="floatingPassword"><span>Name</span></label>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="form-floating position-relative" style="top: 40px;">
-                        <input class="form-control bg-transparent" id="floatingPassword" placeholder="Address"
-                               style="height: 40px;" type="text">
-                        <label for="floatingPassword"><span>Address</span></label>
-                    </div>
-
-                    <div class="form-floating position-relative" style="top: 60px;">
-                        <input class="form-control bg-transparent" id="floatingPassword" placeholder="Tel"
-                               style="height: 40px;"
-                               type="tel">
-                        <label for="floatingPassword"><span>E-Mail</span></label>
-                    </div>
-
-                    <div class="form-floating position-relative" style="top: 80px;">
-                        <input class="form-control bg-transparent" id="floatingPassword" placeholder="Address"
-                               style="height: 40px;" type="text">
-                        <label for="floatingPassword"><span>Contact Number</span></label>
-                    </div>
-
+    <section class="container-fluid">
+    <section class="row mt-2">
+        <div class="col-12 col-lg-7 px-0">
+            <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleCaptions">
+                <div class="carousel-indicators">
+                    <button aria-current="true" aria-label="Slide 1" class="active" data-bs-slide-to="0"
+                            data-bs-target="#carouselExampleCaptions" type="button"></button>
+                    <button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#carouselExampleCaptions"
+                            type="button"></button>
+                    <button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#carouselExampleCaptions"
+                            type="button"></button>
                 </div>
-
-                <div class="col-5 bg-light mx-4 shadow">
-
-                    <div class="row position-relative" style="height: 40px; background-color: #FF415B;">
-                        <h3 class="fs-6 text-white top-0 bottom-0 m-auto "
-                            style="text-align: center;">Item Select</h3>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img alt="..." class="d-block w-100" src="../assets/images/img1.jpeg">
                     </div>
-
-                    <div class="row">
-
-                        <div class="col">
-
-                            <div class="form-floating position-relative" style="top: 10px;">
-                                <select aria-label="Floating label select example" class="form-select bg-transparent"
-                                        id="floatingSelect" style="height: 40px; width: 100%;">
-                                    <option selected>Open this select menu</option>
-                                    <option value="1">I001</option>
-                                    <option value="2">I002</option>
-                                    <option value="3">I003</option>
-                                </select>
-
-                                <label for="floatingSelect">Item Code</label>
-
-                            </div>
-
-                        </div>
-
-                        <div class="col">
-
-                            <div class="form-floating position-relative" style="top: 10px;">
-                                <input class="form-control bg-transparent" id="floatingPassword" placeholder="Name"
-                                       style="height: 40px;"
-                                       type="text">
-                                <label for="floatingPassword"><span>Item Name</span></label>
-                            </div>
-
-                        </div>
-
+                    <div class="carousel-item">
+                        <img alt="..." class="d-block w-100" src="../assets/images/img2.jpeg">
+                    
                     </div>
-
-                    <div class="row">
-
-                        <div class="col">
-
-                            <div class="form-floating position-relative" style="top: 40px;">
-                                <input class="form-control bg-transparent" id="floatingPassword" placeholder="Address"
-                                       style="height: 40px;" type="text">
-                                <label for="floatingPassword"><span>Price</span></label>
-                            </div>
-
-                        </div>
-
-                        <div class="col">
-
-                            <div class="form-floating position-relative" style="top: 40px;">
-                                <input class="form-control bg-transparent" id="floatingPassword" placeholder="Name"
-                                       style="height: 40px;"
-                                       type="text">
-                                <label for="floatingPassword"><span>Qty On Hand</span></label>
-                            </div>
-
-                        </div>
-
+                    <div class="carousel-item">
+                        <img alt="..." class="d-block w-100" src="../assets/images/img3.jpeg">
+                    
                     </div>
-
-                    <div class="form-floating position-relative" style="top: 80px;">
-                        <input class="form-control bg-transparent" id="floatingPassword" placeholder="Address"
-                               style="height: 40px;" type="text">
-                        <label for="floatingPassword"><span>Order Quantity</span></label>
-                    </div>
-
-                    <div class="container-fluid position-absolute" style="left: 525px;right: 0;margin: auto;
-                    width: 135px;bottom: 275px;">
-                        <button class="btn btn-outline-danger btn-md position-absolute start-0" style="width: 100%;">
-                            Add To Cart
-                        </button>
-                    </div>
-
                 </div>
-
-                <div class="col bg-light shadow position-relative">
-
-                    <div class="form-floating mb-3" style="top: 10px;">
-                        <input class="form-control" id="floatingInput" placeholder="name@example.com" style="height: 40px;"
-                               type="email" type="text">
-                        <label for="floatingInput">Total</label>
+                <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleCaptions"
+                        type="button">
+                    <span aria-hidden="true" class="carousel-control-prev-icon"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleCaptions"
+                        type="button">
+                    <span aria-hidden="true" class="carousel-control-next-icon"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <div class="col  mt-2 mt-lg-0 ">
+            <div class="row">
+                <div class="col">
+                    <div class="myCard">
+                        <i class="fas fa-users"></i>
+                       <h1>All Customers</h1>
+                        <h2>500</h2>
                     </div>
-
-                    <div class="form-floating mb-3" style="top: 10px;">
-                        <input class="form-control" id="floatingInput" placeholder="name@example.com" style="height: 40px;"
-                               type="email" type="text">
-                        <label for="floatingInput">Sub Total</label>
-                    </div>
-
-                    <div class="form-floating mb-3" style="top: 10px;">
-                        <input class="form-control" id="floatingInput" placeholder="name@example.com" style="height: 40px;"
-                               type="email" type="text">
-                        <label for="floatingInput">Cash</label>
-                    </div>
-
-                    <div class="form-floating mb-3" style="top: 10px;">
-                        <input class="form-control" id="floatingInput" placeholder="name@example.com" style="height: 40px;"
-                               type="email" type="text">
-                        <label for="floatingInput">Discount</label>
-                    </div>
-
-                    <div class="form-floating mb-3" style="top: 10px;">
-                        <input class="form-control" id="floatingInput" placeholder="name@example.com" style="height: 40px;"
-                               type="email" type="text">
-                        <label for="floatingInput">Balance</label>
-                    </div>
-
-                    <div class="container-fluid position-absolute" style="left: 0;right: 0;margin: auto;
-                    width: 135px;bottom: 55px;">
-                        <button class="btn btn-outline-success btn-md position-absolute start-0" style="width: 100%;">
-                            Purchase
-                        </button>
-                    </div>
-
                 </div>
-
-                <div class="row position-relative start-0 end-0 m-auto" style="width: 100%; height: 20%;">
-
-                    <div class="col bg-light">
-
-                        <table class="table table-hover">
-                            <thead>
-                            <tr>
-                                <th scope="col">Customer Id</th>
-                                <th scope="col">Item Code</th>
-                                <th scope="col">Item Description</th>
-                                <th scope="col">Item Qty</th>
-                                <th scope="col">Item Price</th>
-                                <th scope="col">Item Discount</th>
-                                <th scope="col">Total</th>
-                            </tr>
-                            </thead>
-                        </table>
-
+                <div class="col">
+                    <div class="myCard">
+                        <i class="fab fa-shopify"></i>
+                        <h1>All Items</h1>
+                        <h2>10 000</h2>
                     </div>
-
                 </div>
 
             </div>
-
+            <div class="row mt-3">
+                <div class="col">
+                    <div class="myCard">
+                        <i class="fas fa-shopping-cart"></i>
+                        <h1>All Orders</h1>
+                        <h2>4500</h2>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </section>
+</section>
 
 </main>
 
