--- a/myProjects/CSS Frameworks/subPages/item.html
+++ b/myProjects/CSS Frameworks/subPages/item.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="overflow-hidden">
+<body>
 
 <header>
 
@@ -32,6 +32,8 @@
                 <ul class="navbar-nav m-lg-auto mb-2 mb-lg-0" style="left:200px;">
                     <li class="nav-item"><a class="nav-link text-white"
                                             href="../subPages/home.html"><span>Home</span></a></li>
+                    <li class="nav-item"><a class="nav-link text-white" 
+                                                href="../subPages/placeOrder.html"><span>Place Orders</span></a></li>
                     <li class="nav-item"><a class="nav-link text-white"
                                             href="../subPages/orders.html"><span>Orders</span></a></li>
                     <li class="nav-item"><a class="nav-link text-white"
